# BeeSafer

./: .gitignore  ReadMe.org
src/: CMakeLists.txt  RenderingObject.cpp  RenderingObject.h  Window.cpp  Window.hpp  compile_commands.json  game.cpp  game.hpp  main.cpp  playground.cpp  playground.h
src/dependencies/: CMakeLists.txt
src/res/: Bee.stl
src/shader/: FragmentShader.frag  SimpleFragmentshader.fragmentshader  SimpleVertexshader.vertexshader
